Add Posts, etc.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <title>GameGuidez</title>
+  <title>Non profit Connect</title>
 </head>
 <body class="grey lighten-3" >
 
@@ -34,19 +34,19 @@
          <img src="Nonprofit Full-05.png" style="width: 160px; margin-top: 5px;">
       </a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li class="logged-in">
+        <li class="logged-in" style="display: none;">
             <a href="#" class="grey-text modal-trigger" data-target="modal-account">Account</a>
           </li>
-          <li class="logged-in">
+          <li class="logged-in" style="display: none;">
             <a href="#" class="grey-text" id="logout">Logout</a>
           </li>
-          <li class="logged-in">
+          <li class="logged-in" style="display: none;">
             <a href="#" class="grey-text modal-trigger" data-target="modal-create">Create Guide</a>
           </li>
-          <li class="logged-out">
+          <li class="logged-out" style="display: none;">
             <a href="#" class="grey-text modal-trigger" data-target="modal-login">Login</a>
           </li>
-          <li class="logged-out">
+          <li class="logged-out" style="display: none;">
             <a href="#" class="grey-text modal-trigger" data-target="modal-signup">Sign up</a>
           </li>
         </span>
@@ -67,7 +67,12 @@
           <input type="password" id="signup-password" required />
           <label for="signup-password">Choose password</label>
         </div>
-        <button class="btn yellow darken-2 z-depth-0">Sign up</button>
+        <div class="input-field">
+         <input type="text" id="signup-bio" required />
+         <label for="signup-bio">One Line Bio</label>
+       </div>
+       <button class="btn yellow darken-2 z-depth-0">Sign up</button>
+      </div>
       </form>
     </div>
   </div>
@@ -101,15 +106,15 @@
   <!-- CREATE GUIDE MODAL -->
   <div id="modal-create" class="modal">
     <div class="modal-content">
-      <h4>Create Guide</h4><br />
+      <h4>Create Event</h4><br />
       <form id="create-form">
         <div class="input-field">
           <input type="text" id="title" required>
-          <label for="title">Guide Title</label>
+          <label for="title">Event Title</label>
         </div>
         <div class="input-field">
           <textarea id="content" class="materialize-textarea" required></textarea>
-          <label for="content">Guide Content</label>
+          <label for="content">Event Content</label>
         </div>
         <button class="btn yellow darken-2 z-depth-0">Create</button>
       </form>
@@ -118,28 +123,34 @@
 
   <!-- GUIDE LIST -->
   <div class="container" style="margin-top: 40px;">
-    <ul class="collapsible z-depth-0 guides" style="border: none;">
-      <li>
-        <div class="collapsible-header grey lighten-4">Guide title</div>
-        <div class="collapsible-body white">Lorem ipsum dolor sit amet.</div>
-      </li>
-      <li>
-        <div class="collapsible-header grey lighten-4">Guide title</div>
-        <div class="collapsible-body white"><span>Lorem ipsum dolor sit amet.</span></div>
-      </li>
-      <li>
-        <div class="collapsible-header grey lighten-4">Guide title</div>
-        <div class="collapsible-body white"><span>Lorem ipsum dolor sit amet.</span></div>
-      </li>
-      <li>
-        <div class="collapsible-header grey lighten-4">Guide title</div>
-        <div class="collapsible-body white"><span>Lorem ipsum dolor sit amet.</span></div>
-      </li>
+    <ul class="collapsible z-depth-0 posts" style="border: none;">
+
     </ul>
   </div>
 
+  <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCs7LZFLguM2-1-uidaLL5i5XvRozSHQnA",
+    authDomain: "nonprofit-d44a2.firebaseapp.com",
+    databaseURL: "https://nonprofit-d44a2.firebaseio.com",
+    projectId: "nonprofit-d44a2",
+    storageBucket: "nonprofit-d44a2.appspot.com",
+    messagingSenderId: "521912192208"
+  };
+  firebase.initializeApp(config);
+
+  // Make auth and firestore references
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+</script>
 
 
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="scripts/auth.js"></script>
+  <script src="scripts/index.js"></script>
 
   <script>
 	// Initialize and add the map
@@ -161,9 +172,5 @@
 		<script async defer
 		src="https://maps.googleapis.com/maps/api/js?address=Santa+Cruz,+CA&key=AIzaSyD8hb2eS6GpwPTWkJ6T-na2SMGDAwFmC24&callback=initMap">
 		</script>
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="scripts/auth.js"></script>
-  <script src="scripts/index.js"></script>
 </body>
 </html>
