--- a/index.html
+++ b/index.html
@@ -128,29 +128,17 @@
     </ul>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyCs7LZFLguM2-1-uidaLL5i5XvRozSHQnA",
-    authDomain: "nonprofit-d44a2.firebaseapp.com",
-    databaseURL: "https://nonprofit-d44a2.firebaseio.com",
-    projectId: "nonprofit-d44a2",
-    storageBucket: "nonprofit-d44a2.appspot.com",
-    messagingSenderId: "521912192208"
-  };
-  firebase.initializeApp(config);
-
-  // Make auth and firestore references
-  const auth = firebase.auth();
-  const db = firebase.firestore();
-</script>
+  <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>n
 
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="scripts/auth.js"></script>
   <script src="scripts/index.js"></script>
+
+  <script>
+	  // Add API key and Firebase initialize
+</script>
 
   <script>
 	// Initialize and add the map
